--- a/requirements.txt
+++ b/requirements.txt
@@ -22,7 +22,6 @@ compressed-segmentation==2.0.1
 connected-components-3d==3.1.2
 crc32c==2.2
 cryptography==3.4.6
-cucumber==0.0.5
 cycler==0.10.0
 decorator==4.4.2
 deflate==0.3.0
@@ -63,13 +62,12 @@ kiwisolver==1.3.1
 Markdown==3.3.4
 MarkupSafe==1.1.1
 matplotlib==3.4.0rc1
--e git+https://github.com/supersergiy/scheduler.git@8905783b680cafcebfec52fec7f0e68e4be0e5fd#egg=mazepa
+mazepa==0.1.0
 metroem==0.0.6
 modelhouse==0.0.6
 multiprocess==0.70.11.1
 networkx==2.5
 numpy==1.20.1
--e git+git@github.com:supersergiy/objectscriber.git@66bbecebfe82a381b5f85f35964210a441057c4f#egg=objectscriber
 opencv-python==4.5.1.48
 orjson==3.5.0
 packaging==20.9
@@ -122,7 +120,6 @@ sphinxcontrib-htmlhelp==1.0.3
 sphinxcontrib-jsmath==1.0.1
 sphinxcontrib-qthelp==1.0.3
 sphinxcontrib-serializinghtml==1.1.4
--e git+git@github.com:supersergiy/python-task-queue.git@a6cabc90447dce2e818eb120b32da447007bb901#egg=task_queue
 tenacity==7.0.0
 tifffile==2021.2.26
 toml==0.10.2
