--- a/requirements-release.txt
+++ b/requirements-release.txt
@@ -1,137 +1,135 @@
 alabaster==0.7.12
-artificery==0.0.3.2
-attrs==20.3.0
-Babel==2.9.0
-beautifulsoup4==4.9.3
-bleach==3.3.0
-boto3==1.17.20
-botocore==1.20.20
+artificery==0.0.3.3
+attrs==21.2.0
+Babel==2.9.1
+backcall==0.2.0
+boto3==1.17.106
+botocore==1.20.106
 Brotli==1.0.9
 brotlipy==0.7.0
-cached-property==1.5.2
-cachetools==4.2.1
-certifi==2020.12.5
+cachetools==4.2.2
+certifi==2021.5.30
 cffi==1.14.5
 chardet==4.0.0
 click==7.1.2
-click-option-group==0.5.2
-cloud-files==1.25.1
-cloud-volume==3.8.0
-colorama==0.4.4
+click-option-group==0.5.3
+cloud-files==2.0.1
+cloud-volume==5.0.0
 compressed-segmentation==2.0.1
-connected-components-3d==3.1.2
-crc32c==2.2
-cryptography==3.4.6
+compresso==2.3.1
+connected-components-3d==3.2.0
+crc32c==2.2.post0
+cryptography==3.4.7
 cycler==0.10.0
 decorator==4.4.2
 deflate==0.3.0
-dijkstra3d==1.8.0
-dill==0.3.3
-docutils==0.15
-DracoPy==0.0.15
-edt==2.0.2
-fastremap==1.11.1
+dijkstra3d==1.9.2
+dill==0.3.4
+docutils==0.15.2
+DracoPy==0.0.19
+edt==2.1.1
+fastremap==1.12.2
 fill-voids==2.0.1
 fpzip==1.1.4
-future==0.18.2
 gevent==21.1.2
-google==3.0.0
-google-api-core==1.26.3
-google-auth==1.28.1
-google-cloud-core==1.6.0
-google-cloud-storage==1.37.1
+google-api-core==1.30.0
+google-auth==1.32.1
+google-cloud-core==1.7.1
+google-cloud-storage==1.40.0
 google-crc32c==1.1.2
-google-resumable-media==1.2.0
+google-resumable-media==1.3.1
 googleapis-common-protos==1.53.0
-greenlet==1.0.0
-h5py==3.2.0
-idna==2.10
+greenlet==1.1.0
+h5py==3.3.0
+idna==2.9
 imageio==2.9.0
 imagesize==1.2.0
-importlib-metadata==3.7.0
 inflection==0.5.1
 iniconfig==1.1.1
-jeepney==0.6.0
-Jinja2==2.11.3
+ipdb==0.13.9
+ipython==7.25.0
+ipython-genutils==0.2.0
+jedi==0.18.0
+Jinja2==3.0.1
 jmespath==0.10.0
-json5==0.9.5
+json5==0.9.6
 jsonschema==3.2.0
-keyring==22.3.0
-kimimaro==2.0.3
+kimimaro==2.1.1
 kiwisolver==1.3.1
 Markdown==3.3.4
-MarkupSafe==1.1.1
-matplotlib==3.4.0rc1
+MarkupSafe==2.0.1
+matplotlib==3.4.2
+matplotlib-inline==0.1.2
 mazepa==0.1.0
-metroem==0.0.6
-modelhouse==0.0.6
-multiprocess==0.70.11.1
-networkx==2.5
-numpy==1.20.1
-opencv-python==4.5.1.48
-orjson==3.5.0
-packaging==20.9
+-e git+https://github.com/seung-lab/metroem.git@f31a5615a80e609307935a17683543579a5b803c#egg=metroem
+-e git+https://github.com/supersergiy/modelhouse.git@03e2d38ae28d6f3a9fc9c7a6a6c49170bec8f66e1#egg=modelhouse
+multiprocess==0.70.12.2
+networkx==2.5.1
+numpy==1.21.0
+opencv-python-headless==4.5.2.54
+orjson==3.5.4
+packaging==21.0
+parso==0.8.2
 pathlib==1.0.1
-pathos==0.2.7
-pbr==5.5.1
-Pillow==8.1.1
-pkginfo==1.7.0
+pathos==0.2.8
+pbr==5.6.0
+pexpect==4.8.0
+pickleshare==0.7.5
+Pillow==8.3.1
 pluggy==0.13.1
 posix-ipc==1.0.5
-pox==0.2.9
-ppft==1.6.6.3
-procspec==0.0.4
-protobuf==4.0.0rc2
+pox==0.3.0
+ppft==1.6.6.4
+-e git+https://github.com/seung-lab/procspec.git@32765887ee1dd45d47a3279ada3fe5042501c531#egg=procspec
+prompt-toolkit==3.0.19
+protobuf==3.17.3
 psutil==5.4.3
+ptyprocess==0.7.0
 py==1.10.0
 pyasn1==0.4.8
 pyasn1-modules==0.2.8
 pycparser==2.20
-Pygments==2.8.0
+Pygments==2.9.0
 pyOpenSSL==20.0.1
 pyparsing==2.4.7
-pyrsistent==0.17.3
-pysimdjson==3.2.0
-pytest==6.2.2
+pyrsistent==0.18.0
+pysimdjson==4.0.2
+pytest==6.2.4
 python-dateutil==2.8.1
-python-jsonschema-objects==0.3.13
+python-jsonschema-objects==0.4.0
 pytz==2021.1
 PyWavelets==1.1.1
 PyYAML==5.4.1
-readme-renderer==29.0
 requests==2.25.1
-requests-toolbelt==0.9.1
-rfc3986==1.4.0
-rsa==4.6
-s3transfer==0.3.4
-scalenet==0.0.8
-scikit-image==0.18.1
-scipy==1.6.1
-SecretStorage==3.3.1
-simplejpeg==1.4.1
-six==1.15.0
+rsa==4.7.2
+s3transfer==0.4.2
+-e git+https://github.com/seung-lab/scalenet.git@59dcac5968e4a0fd8a4ce5003eec4b8543c02b98#egg=scalenet
+scikit-image==0.18.2
+scipy==1.7.0
+simplejpeg==1.6.1
+six==1.16.0
 snowballstemmer==2.1.0
-soupsieve==2.2.1
-Sphinx==3.5.1
-sphinx-click==2.6.0
+Sphinx==4.0.3
+sphinx-click==3.0.1
 sphinxcontrib-applehelp==1.0.2
 sphinxcontrib-devhelp==1.0.2
-sphinxcontrib-htmlhelp==1.0.3
+sphinxcontrib-htmlhelp==2.0.0
 sphinxcontrib-jsmath==1.0.1
 sphinxcontrib-qthelp==1.0.3
-sphinxcontrib-serializinghtml==1.1.4
+sphinxcontrib-serializinghtml==1.1.5
+task-queue==2.9.0
 tenacity==7.0.0
-tifffile==2021.2.26
+tifffile==2021.7.2
 toml==0.10.2
-torch==1.6.0
-torchfields==0.0.5
-torchvision==0.7.0
-tqdm==4.58.0
-twine==3.3.0
-typing-extensions==3.7.4.3
-urllib3==1.26.3
-webencodings==0.5.1
-zipp==3.4.0
+torch==1.8.1
+-e git+https://github.com/seung-lab/torchfields.git@2010bfdee87606f29cf35fb7b2f6cc233cf939d8#egg=torchfields
+torchvision==0.9.1
+tqdm==4.61.2
+traitlets==5.0.5
+typing-extensions==3.10.0.0
+urllib3==1.26.6
+uuid==1.30
+wcwidth==0.2.5
 zope.event==4.5.0
-zope.interface==5.2.0
+zope.interface==5.4.0
 zstandard==0.15.2
