--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -26,7 +26,7 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        if [ -f requirements.txt ]; then pip install -e ".[test]"; fi
+        if [ -f requirements-release.txt ]; then pip install -e ".[test]"; fi
     - name: Test with pytest
       run: |
         pytest
