--- a/requirements-release.txt
+++ b/requirements-release.txt
@@ -60,7 +60,7 @@ Markdown==3.3.4
 MarkupSafe==2.0.1
 matplotlib==3.4.2
 matplotlib-inline==0.1.2
--e git+https://github.com/seung-lab/mazepa.git@8a949dfe0afcf89c50d436c5b44638a99dd73998#egg=mazepa
+mazepa==0.1.3
 -e git+https://github.com/seung-lab/metroem.git@d897123a44589269cd4155018536a62f5ff5477b#egg=metroem
 -e git+https://github.com/supersergiy/modelhouse.git@3e2d38ae28d6f3a9fc9c7a6a6c49170bec8f66e1#egg=modelhouse
 multiprocess==0.70.12.2
