--- a/requirements-release.txt
+++ b/requirements-release.txt
@@ -60,9 +60,9 @@ Markdown==3.3.4
 MarkupSafe==2.0.1
 matplotlib==3.4.2
 matplotlib-inline==0.1.2
-mazepa==0.1.3
--e git+https://github.com/seung-lab/metroem.git@d897123a44589269cd4155018536a62f5ff5477b#egg=metroem
--e git+https://github.com/supersergiy/modelhouse.git@3e2d38ae28d6f3a9fc9c7a6a6c49170bec8f66e1#egg=modelhouse
+mazepa==0.1.4
+metroem
+modelhouse>=0.1.2
 multiprocess==0.70.12.2
 networkx==2.5.1
 numpy==1.21.0
@@ -122,7 +122,7 @@ tenacity==7.0.0
 tifffile==2021.7.2
 toml==0.10.2
 torch==1.8.1
--e git+https://github.com/seung-lab/torchfields.git@2010bfdee87606f29cf35fb7b2f6cc233cf939d8#egg=torchfields
+torchfields>=0.1.2
 torchvision==0.9.1
 tqdm==4.61.2
 traitlets==5.0.5
