--- a/.readthedocs.yml
+++ b/.readthedocs.yml
@@ -21,4 +21,5 @@ formats:
 python:
   version: 3.7
   install:
-    - requirements: docs/requirements.txt
+    - method: setuptools
+        - path: .
