--- a/.readthedocs.yml
+++ b/.readthedocs.yml
@@ -21,5 +21,6 @@ formats:
 python:
   version: 3.8
   install:
+    - requirements: requirements-releaase.txt
     - method: setuptools
       path: .
