--- a/.readthedocs.yml
+++ b/.readthedocs.yml
@@ -21,6 +21,6 @@ formats:
 python:
   version: 3.8
   install:
-    - requirements: requirements-releaase.txt
+    - requirements: requirements-release.txt
     - method: setuptools
       path: .
