--- a/requirements-release.txt
+++ b/requirements-release.txt
@@ -1,135 +1,123 @@
 alabaster==0.7.12
 artificery==0.0.3.3
-attrs==21.2.0
-Babel==2.9.1
-backcall==0.2.0
-boto3==1.17.106
-botocore==1.20.106
+attrs==22.1.0
+Babel==2.10.3
+boto3==1.24.67
+botocore==1.27.67
 Brotli==1.0.9
-brotlipy==0.7.0
-cachetools==4.2.2
-certifi==2021.5.30
-cffi==1.14.5
-chardet==4.0.0
+cachetools==5.2.0
+certifi==2022.6.15
+cffi==1.15.1
+chardet==5.0.0
+charset-normalizer==2.1.1
 click==7.1.2
 click-option-group==0.5.3
-cloud-files==2.0.1
-cloud-volume==5.0.0
-compressed-segmentation==2.0.1
-compresso==2.3.1
-connected-components-3d==3.2.0
-crc32c==2.2.post0
-cryptography==3.4.7
-cycler==0.10.0
-decorator==4.4.2
+cloud-files==4.9.1
+cloud-volume==8.9.1
+compressed-segmentation==2.2.0
+compresso==3.0.0
+connected-components-3d==3.10.2
+crc32c==2.3
+cryptography==37.0.4
 deflate==0.3.0
-dijkstra3d==1.9.2
-dill==0.3.4
-docutils==0.15.2
-DracoPy==0.0.19
-edt==2.1.1
-fastremap==1.12.2
-fill-voids==2.0.1
-fpzip==1.1.4
-gevent==21.1.2
-google-api-core==1.30.0
-google-auth==1.32.1
-google-cloud-core==1.7.1
-google-cloud-storage==1.40.0
-google-crc32c==1.1.2
-google-resumable-media==1.3.1
-googleapis-common-protos==1.53.0
-greenlet==1.1.0
-h5py==3.3.0
-idna==2.9
-imageio==2.9.0
-imagesize==1.2.0
+dijkstra3d==1.12.0
+dill==0.3.5.1
+docutils==0.17.1
+DracoPy==1.2.0
+edt==2.3.0
+fastremap==1.13.3
+fill-voids==2.0.2
+fpzip==1.2.0
+gevent==21.12.0
+google-api-core==2.10.0
+google-auth==2.11.0
+google-cloud-core==2.3.2
+google-cloud-storage==2.5.0
+google-crc32c==1.5.0
+google-resumable-media==2.3.3
+googleapis-common-protos==1.56.4
+greenlet==1.1.3
+h5py==3.7.0
+idna==3.3
+imageio==2.21.2
+imagesize==1.4.1
 inflection==0.5.1
 iniconfig==1.1.1
-ipdb==0.13.9
-ipython==7.25.0
-ipython-genutils==0.2.0
-jedi==0.18.0
-Jinja2==3.0.1
-jmespath==0.10.0
-json5==0.9.6
-jsonschema==3.2.0
-kimimaro==2.1.1
-kiwisolver==1.3.1
-Markdown==3.3.4
-MarkupSafe==2.0.1
-matplotlib==3.4.2
-matplotlib-inline==0.1.2
+Jinja2==3.1.2
+jmespath==1.0.1
+json5==0.9.10
+jsonschema==4.15.0
+kimimaro==3.2.0
+Markdown==3.4.1
+MarkupSafe==2.1.1
 mazepa==0.1.5
 metroem==0.1.1
-modelhouse>=0.1.2
-multiprocess==0.70.12.2
-networkx==2.5.1
-numpy==1.21.0
-opencv-python-headless==4.5.2.54
-orjson==3.5.4
-packaging==21.0
-parso==0.8.2
+modelhouse==0.1.2
+multiprocess==0.70.13
+networkx==2.8.6
+numpy==1.23.2
+orjson==3.8.0
+packaging==21.3
 pathlib==1.0.1
-pathos==0.2.8
-pbr==5.6.0
-pexpect==4.8.0
-pickleshare==0.7.5
-Pillow==8.3.1
-pluggy==0.13.1
+pathos==0.2.9
+pbr==5.10.0
+Pillow==9.2.0
+pluggy==1.0.0
 posix-ipc==1.0.5
-pox==0.3.0
-ppft==1.6.6.4
--e git+https://github.com/seung-lab/procspec.git@32765887ee1dd45d47a3279ada3fe5042501c531#egg=procspec
-prompt-toolkit==3.0.19
-protobuf==3.17.3
-psutil==5.4.3
-ptyprocess==0.7.0
-py==1.10.0
+pox==0.3.1
+ppft==1.7.6.5
+procspec==0.0.4
+protobuf==4.21.5
+psutil==5.9.2
+py==1.11.0
 pyasn1==0.4.8
 pyasn1-modules==0.2.8
-pycparser==2.20
-Pygments==2.9.0
-pyOpenSSL==20.0.1
-pyparsing==2.4.7
-pyrsistent==0.18.0
-pysimdjson==4.0.2
-pytest==6.2.4
-python-dateutil==2.8.1
-python-jsonschema-objects==0.4.0
-pytz==2021.1
-PyWavelets==1.1.1
-PyYAML==5.4.1
-requests==2.25.1
-rsa==4.7.2
-s3transfer==0.4.2
--e git+https://github.com/seung-lab/scalenet.git@59dcac5968e4a0fd8a4ce5003eec4b8543c02b98#egg=scalenet
-scikit-image==0.18.2
-scipy==1.7.0
-simplejpeg==1.6.1
+pycparser==2.21
+pyenchant==3.2.2
+Pygments==2.13.0
+pyOpenSSL==22.0.0
+pyparsing==3.0.9
+pyrsistent==0.18.1
+pysimdjson==5.0.1
+pyspng-seunglab==1.0.0
+pytest==7.1.3
+python-dateutil==2.8.2
+python-jsonschema-objects==0.4.1
+pytz==2022.2.1
+PyWavelets==1.3.0
+PyYAML==6.0
+requests==2.28.1
+rsa==4.9
+s3transfer==0.6.0
+scalenet==0.1.0
+scikit-image==0.19.3
+scipy==1.9.1
+simplejpeg==1.6.5
 six==1.16.0
-snowballstemmer==2.1.0
-Sphinx==4.0.3
-sphinx-click==3.0.1
+snowballstemmer==2.2.0
+Sphinx==5.1.1
+sphinx-click==4.3.0
+sphinx-rtd-theme==1.0.0
 sphinxcontrib-applehelp==1.0.2
 sphinxcontrib-devhelp==1.0.2
 sphinxcontrib-htmlhelp==2.0.0
 sphinxcontrib-jsmath==1.0.1
 sphinxcontrib-qthelp==1.0.3
 sphinxcontrib-serializinghtml==1.1.5
-task-queue==2.9.0
-tenacity==7.0.0
-tifffile==2021.7.2
-toml==0.10.2
-torch==1.8.1
-torchfields>=0.1.2
-torchvision==0.9.1
-tqdm==4.61.2
-traitlets==5.0.5
-typing-extensions==3.10.0.0
-urllib3==1.26.6
-uuid==1.30
-wcwidth==0.2.5
+sphinxcontrib-spelling==7.6.0
+task-queue==2.12.0
+tenacity==8.0.1
+tifffile==2022.8.12
+tomli==2.0.1
+torch==1.12.1
+torchfields==0.1.2
+torchvision==0.13.1
+tqdm==4.64.1
+typing_extensions==4.3.0
+urllib3==1.26.12
+urllib3-secure-extra==0.1.0
+zfpc==0.1.2
+zfpy==1.0.0.post3
 zope.event==4.5.0
 zope.interface==5.4.0
-zstandard==0.15.2
+zstandard==0.18.0
