--- a/docs/k8s_deployment_example.yaml
+++ b/docs/k8s_deployment_example.yaml
@@ -1,69 +1,71 @@
-apiVersion: v1
-items:
-- apiVersion: extensions/v1beta1
-  kind: Deployment
-  metadata:
-    annotations:
-    labels:
-      run: corgie
-    name: corgie
-    namespace: default
-  spec:
-    progressDeadlineSeconds: 600
-    replicas: 3
-    revisionHistoryLimit: 2
-    selector:
-      matchLabels:
-        run: corgie
-    strategy:
-      rollingUpdate:
-        maxSurge: 100%
-        maxUnavailable: 100%
-      type: RollingUpdate
-    template:
-      metadata:
-        creationTimestamp: null
-        labels:
-          run: corgie
-      spec:
-        containers:
-        - args:
-          - -c
-          - corgie-worker --queue_name manuel-seamless-2 --lease_seconds 150
-          command:
-          - /bin/sh
-          image: seunglab/corgie:latest
-          imagePullPolicy: Always
-          name: corgie
-          resources: {}
-          terminationMessagePath: /dev/termination-log
-          terminationMessagePolicy: File
-          resources:
-            limits:
-              cpu: 3
-          volumeMounts:
-          - mountPath: /root/.cloudvolume/secrets
-            name: secrets
-            readOnly: true
-          - mountPath: /root/.aws/credentials
-            subPath: credentials
-            name: credentials
-            readOnly: true
-        dnsPolicy: Default
-        restartPolicy: Always
-        schedulerName: default-scheduler
-        securityContext: {}
-        terminationGracePeriodSeconds: 30
-        volumes:
-        - name: secrets
-          secret:
-            defaultMode: 420
-            secretName: secrets
-        - name: credentials
-          secret:
-            defaultMode: 420
-            secretName: credentials
-kind: List
+apiVersion: apps/v1
+kind: Deployment
 metadata:
-  resourceVersion: ""
-  selfLink: ""
+  annotations:
+  labels:
+    run: corgie
+  name: corgie
+  namespace: default
+spec:
+  progressDeadlineSeconds: 600
+  replicas: 1
+  revisionHistoryLimit: 2
+  selector:
+    matchLabels:
+      run: corgie
+  strategy:
+    rollingUpdate:
+      maxSurge: 100%
+      maxUnavailable: 100%
+    type: RollingUpdate
+  template:
+    metadata:
+      creationTimestamp: null
+      labels:
+        run: corgie
+    spec:
+      containers:
+      - args:
+        - -c
+        - corgie-worker --queue_name wms-corgie --lease_seconds 60 --parallel 1
+        command:
+        - /bin/sh
+        image: seunglab/corgie:wms-render
+        imagePullPolicy: Always
+        name: corgie
+        resources: {}
+        terminationMessagePath: /dev/termination-log
+        terminationMessagePolicy: File
+        volumeMounts:
+        - mountPath: /root/.cloudvolume/secrets
+          name: secrets
+          readOnly: true
+        - mountPath: /root/.aws/credentials
+          subPath: credentials
+          name: credentials
+          readOnly: true
+        - name: tmp
+          mountPath: "/tmp"
+          readOnly: false
+        - mountPath: /dev/shm
+          name: dshm
+          readOnly: false
+      dnsPolicy: Default
+      restartPolicy: Always
+      schedulerName: default-scheduler
+      securityContext: {}
+      terminationGracePeriodSeconds: 30
+      volumes:
+      - name: secrets
+        secret:
+          defaultMode: 420
+          secretName: secrets
+      - name: credentials
+        secret:
+          defaultMode: 420
+          secretName: credentials
+      - name: tmp
+        emptyDir: { medium: "Memory" }
+      - name: dshm
+        emptyDir:
+          medium: Memory
